[gd_scene load_steps=16 format=2]

[ext_resource path="res://styles/edit_mode.tres" type="Theme" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Project.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/new_window_FILL0_wght700_GRAD-25_opsz48.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/file_open_FILL0_wght700_GRAD-25_opsz48.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/download_FILL0_wght700_GRAD-25_opsz48.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/logout_FILL0_wght700_GRAD-25_opsz48.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/add_circle_FILL0_wght700_GRAD-25_opsz48.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/autorenew_FILL0_wght700_GRAD-25_opsz48.png" type="Texture" id=9]
[ext_resource path="res://assets/icons/share_off_FILL0_wght700_GRAD-25_opsz48.png" type="Texture" id=10]
[ext_resource path="res://assets/icons/format_paint_FILL0_wght700_GRAD-25_opsz48.png" type="Texture" id=11]
[ext_resource path="res://assets/icons/pageview_FILL0_wght700_GRAD-25_opsz48.png" type="Texture" id=12]
[ext_resource path="res://assets/icons/edit_FILL0_wght700_GRAD-25_opsz48.png" type="Texture" id=13]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.313726, 0.313726, 0.313726, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ProjectOptions" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 4.0
margin_top = 6.0

[node name="New" type="Button" parent="ProjectOptions"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Create a New Project"
mouse_default_cursor_shape = 2
disabled = true
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true

[node name="Open" type="Button" parent="ProjectOptions"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Open a Project"
mouse_default_cursor_shape = 2
disabled = true
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true

[node name="Save" type="Button" parent="ProjectOptions"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Save this Project"
mouse_default_cursor_shape = 2
disabled = true
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="Exit" type="Button" parent="ProjectOptions"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Exit Flowsheet"
mouse_default_cursor_shape = 2
icon = ExtResource( 7 )
icon_align = 1
expand_icon = true

[node name="Project" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 44.0
script = ExtResource( 3 )

[node name="UndoStack" type="Node" parent="Project"]

[node name="ModeOptions" type="HBoxContainer" parent="Project"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.5
margin_right = 64.5
margin_bottom = 40.0
grow_horizontal = 2
alignment = 1

[node name="Edit" type="Button" parent="Project/ModeOptions"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Edit the flowsheet"
mouse_default_cursor_shape = 2
toggle_mode = true
pressed = true
group = SubResource( 1 )
icon = ExtResource( 13 )
icon_align = 1

[node name="View" type="Button" parent="Project/ModeOptions"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "View and test the flowsheet"
mouse_default_cursor_shape = 2
toggle_mode = true
group = SubResource( 1 )
icon = ExtResource( 12 )
icon_align = 1

[node name="Style" type="Button" parent="Project/ModeOptions"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Style the flowsheet"
mouse_default_cursor_shape = 2
toggle_mode = true
group = SubResource( 1 )
icon = ExtResource( 11 )
icon_align = 1

[node name="EditActions" type="HBoxContainer" parent="Project"]
margin_left = 36.0
margin_top = 77.0
margin_right = 984.0
margin_bottom = 109.0

[node name="AddNode" type="Button" parent="Project/EditActions"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 2 )
hint_tooltip = "Add a new node"
mouse_default_cursor_shape = 2
icon = ExtResource( 8 )
icon_align = 1
expand_icon = true

[node name="Recalculate" type="Button" parent="Project/EditActions"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Recalculate node values"
mouse_default_cursor_shape = 2
icon = ExtResource( 9 )
icon_align = 1
expand_icon = true

[node name="ToggleLinks" type="Button" parent="Project/EditActions"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Toggle link visibility"
mouse_default_cursor_shape = 2
icon = ExtResource( 10 )
icon_align = 1
expand_icon = true

[node name="Container" type="ScrollContainer" parent="Project"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = 113.0
margin_right = -19.0
margin_bottom = -22.0
custom_styles/bg = SubResource( 2 )
follow_focus = true

[node name="Flowsheet" type="Control" parent="Project/Container"]
margin_left = 2.0
margin_top = 2.0
margin_right = 986.0
margin_bottom = 419.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="Nodes" type="Control" parent="Project/Container/Flowsheet"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Links" type="Control" parent="Project/Container/Flowsheet"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="PartialConnection" type="Line2D" parent="Project/Container/Flowsheet"]
z_index = 10
width = 2.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2

[node name="Menus" type="Control" parent="Project"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[connection signal="pressed" from="ProjectOptions/New" to="." method="_new_project"]
[connection signal="pressed" from="ProjectOptions/Open" to="." method="_open_project"]
[connection signal="pressed" from="ProjectOptions/Save" to="." method="_save_project"]
[connection signal="pressed" from="ProjectOptions/Exit" to="." method="_exit"]
[connection signal="pressed" from="Project/ModeOptions/Edit" to="Project" method="_set_mode" binds= [ 0 ]]
[connection signal="pressed" from="Project/ModeOptions/View" to="Project" method="_set_mode" binds= [ 1 ]]
[connection signal="pressed" from="Project/ModeOptions/Style" to="Project" method="_set_mode" binds= [ 2 ]]
[connection signal="pressed" from="Project/EditActions/AddNode" to="Project" method="add_node" binds= [ Vector2( 192, 32 ) ]]
[connection signal="pressed" from="Project/EditActions/Recalculate" to="Project" method="_propogate"]
